@@ -20,11 +20,34 @@ app.controller("headerController", function(){
     this.tab = setTab;
   };
 
+  this.findArray= function (arraytosearch, key, valuetosearch) {
+    for (var i = 0; i < arraytosearch.length; i++) {
+      if (arraytosearch[i][key] == valuetosearch) {
+        return i;
+      }
+    }
+    return null;
+  }
+
+  this.setShow = function(category){
+    var index = this.findArray(categorys, "temp", true);
+    if(index != null && index >= 4){
+      this.categorys[index].showNav = false;
+      this.categorys[index].temp = false;
+    }
+    if(category.nav > 4){
+    category.showNav = true;
+    category.temp = true;
+    }
+  }
+
 });
 
 var categorys = [
-  { name: 'Home', nav: 1 },
-  { name: 'Lol', nav: 2 },
-  { name: 'Cs:Go', nav: 3 },
-  { name: 'Contact', nav: 4 },
+  { name: 'Home', nav: 1, showNav: true, temp: false },
+  { name: 'Lol', nav: 2, showNav: true, temp: false },
+  { name: 'Cs:Go', nav: 3, showNav: true, temp: false },
+  { name: 'Contact', nav: 4, showNav: true, temp: false },
+  { name: 'Dota2', nav: 5, showNav: false, temp: false },
+  { name: 'Hearthstone', nav: 6, showNav: false, temp: false }
 ];
