@@ -94,7 +94,7 @@ header{
 
 .search-wrapper{
   position: absolute;
-  bottom: 80px;;
+  bottom: -75px;
   right: 5px;
 }
 
@@ -102,13 +102,13 @@ header{
   width: 0px;
   height: 10px;
   padding: 10px 5px;
-  float: left;
   font: bold 15px 'lucida sans', 'trebuchet MS', 'Tahoma';
   border: 0;
   background: #EEE;
   border-radius: 3px 0 0 3px;
   -webkit-transition: 1; /* Safari */
   transition: 1s;
+  margin-left: 126px;
 }
 
 .search_input:focus {
@@ -189,26 +189,34 @@ header{
   width: 128px;
 }
 
+.search_find_contener{
+  list-style: none;
+  height: 150px;
+  overflow: hidden;
+  margin-left: 126px;
+  padding: 0px;
+  margin-top: -2px;
+}
+
 .hidden{
-  visibility: hidden;
-  position: absolute;
-  right: 200px;
-  -webkit-transition: right 0.4s; /* Safari */
-  transition: right 0.4s;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid #FFFFFF;
+  color: #FFFFFF;
+  width: 0px;
+  height: 29px
+  cursor: pointer;
+  padding: 2px;
 }
 
 .find{
-  visibility: visible;
-  color: #FFFFFF;
-  position: absolute;
-  cursor: pointer;
-  right: 220px;
-  line-height: 1;
-
+  display: block;
+  width: 138px;
 }
 
 .find:hover{
   color: #FF3131;
+  border-bottom: 1px solid #FF3131;
 }
 
 #tab{
