@@ -1,2 +1,4 @@
 Changelog-- v.0.0.1b
-Project chart init
+Header -- done
+Footer -- done
+Index -- template
